@@ -25,10 +25,6 @@
 #include <gst/gst.h>
 #include <png.h>
 
-#include "../hermes/yuv2rgb.h"
-#include "../hermes/yuv2yuv.h"
-
-
 #ifdef __cplusplus
 extern "C" {
 #endif /* __cplusplus */
@@ -62,8 +58,6 @@ struct _GstSnapshot {
 
   png_structp png_struct_ptr;
   png_infop png_info_ptr;
-
-  GstColorSpaceConverter *converter;
 
   GstPad *sinkpad,*srcpad;
 };
